  ``launchpad.packaging_verbosity``. It can be set to one of

  off
    disable all checks


  minimal
    only display if the branch is out-of-date

  short
    also display single-line up-to-date and missing,


  all
    (default) display multi-line content for all states


  (John Arbash Meinel, #609187, #812928)


Improvements
************

Documentation
*************

API Changes
***********

Internals
*********

Testing
*******


bzr 2.1.4
#########

:2.1.4: 2011-05-16

The fourth release in our 2.1 series addresses some user-inconvenience bugs.
None are critical, but upgrading is recommended for all users on earlier 2.1
releases.


Compatibility Breaks
********************

* Launchpad has announced that the ``edge.launchpad.net`` instance is
  deprecated and may be shut down in the future
  <http://blog.launchpad.net/general/edge-is-deprecated>.  Bazaar has therefore
  been updated in this release to talk to the main (``launchpad.net``) servers,
  rather than the ``edge`` ones. (Vincent Ladeuil, #583667)

New Features
************

None.

Bug Fixes
*********

* Avoid UnicodeDecodeError in ``bzr add`` with multiple files under a non-ascii
  path on windows from symlink support addition. (Martin [gz], #686611)

* Skip tests that needs a bzr source tree when there isn't one. This is
  needed to succesfully run the test suite for installed versions.
  (Vincent Ladeuil, #644855).

* Skip the tests that requires respecting the chmod bits when running as root.
  (Vincent Ladeuil, #646133)

* Using bzr with `lp:` urls behind an http proxy should work.
  (Robert Collins, #558343)

Improvements
************

Documentation
*************

API Changes
***********

Internals
*********

Testing
*******


bzr 2.1.3
#########

:Codename: Do run run
:2.1.3: 2010-09-17

The third release in our 2.1 series addresses several user-inconvenience bugs
(and includes the fixes done in 2.0.6).  None are critical, but upgrading is
recommended for all users on earlier 2.1 releases.
